--- a/BOOTCAMP_DEVJR/index.html
+++ b/BOOTCAMP_DEVJR/index.html
@@ -6,7 +6,7 @@
     <title>Hello HTMLt</title>
 </head>
 <body>
-    <P>Uma verdade?</P>
-    <p><strong>Eu amo muito vc<strong>❤</p>
+    <P>Hello HTML</P>
+    <p><strong>Hello HTML 2<strong></p>
 </body>
 </html>
